manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-date-service
spec:
  selector:
    app: nginx-date
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
