manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-date-ingress
  annotations:
    # Adjust the annotation below to match your Ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: haproxy
  rules:
    - host: autodeploy.hri.testinglab.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-date-service
                port:
                  number: 80
